Public API
